$Id: History,v 1.49 2002-09-02 13:27:26 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Sep  2th, 2002 M.dressel  transport-V04-01-01-internal-3
-----------------------------------------
    code cleanup for code-wizard


Aug  29th, 2002 M.Dressel int-1-V04-01-01
-----------------------------------------
- adopted to changes in int-2-geombias-V04-01-01:
     renaming of G4PTouchableKey to G4GeometryCell 
     changing  G4VIStore and G4IStore 
     and dependants

  

Aug  13th, 2002 M.Dressel transport-V04-01-01
----------------------------------------------
- added G4CellStoreScorer,  G4VTrackTerminator and changed the sampler
  classes in order to use the G4VTrackTerminator (if necessary) to
  kill a track. 
- coworks with geombias-V04-01-01

July 18th, 2002 M.Dressel 
-------------------------
- bug fix in G4TrackLogger

July 11th, 2002 M.Dressel internal-2-transport-V04-01-01
--------------------------------------------------------
- moved the standard scoring classes to run because 
  they need G4EventManager.

July 10th, 2002 M.Dressel internal-1-transport-V04-01-01
--------------------------------------------------------