@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4MassImportanceProcess.hh,v 1.4 2002-08-13 10:07:45 dressel Exp $
+// $Id: G4MassImportanceProcess.hh,v 1.5 2002-09-18 13:52:10 dressel Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ----------------------------------------------------------------------
@@ -71,6 +71,11 @@ public:  // with description
 
   void KillTrack();
     // used in case no scoring process follows that does the killing
+
+  G4String GetName() const {
+    return theProcessName;
+  }
+
 
 public:  // without description
 
