@@ -1,4 +1,4 @@
-$Id: History,v 1.49 2002-09-02 13:27:26 dressel Exp $
+$Id: History,v 1.50 2002-09-18 13:53:31 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Sep  18th, 2002 M.Dressel transport-V04-01-01-internal-4
+--------------------------------------------------------
+- tagging a version before reducing the number of Samplers
 
 Sep  2th, 2002 M.dressel  transport-V04-01-01-internal-3
 -----------------------------------------
